added CharacterController + handle internal server error
